// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BuyButton /> should match snapshot loading 1`] = `
<Fragment>
  <ContentLoader />
</Fragment>
`;

exports[`<BuyButton /> should match snapshot normal 1`] = `
<Fragment>
  <Button
    disabled={false}
    isLoading={false}
    onClick={[Function]}
    primary={true}
  >
     Test 
  </Button>
</Fragment>
`;

exports[`<BuyButton /> should match snapshot unavailable 1`] = `
<Fragment>
  <Button
    disabled={true}
    isLoading={false}
    onClick={[Function]}
    primary={true}
  >
    <FormattedMessage
      id="buyButton-label-unavailable"
    />
  </Button>
</Fragment>
`;
